Fixe layout issues on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -67,8 +67,18 @@ h3.author__name {
   font-family: "Alegreya"!important;
 }
 
+//a.site-title {
+//  display: none;
+//}
+
+#site-nav a {
+  font-family: "Alegreya";
+  font-size: 30px;
+}
+
 a.site-title {
-  display: none;
+  font-size: 60px!important;
+  font-weight: bold!important;
 }
 
 p {
@@ -83,62 +93,7 @@ h3 {
   font-size: 20px;
 }
 
-
-
-div.masthead {
-  display: none;
-}
-
-div.main-title {
-  box-sizing: border-box;
-}
-
-div.main-title #thehead {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 1em;
-  padding-right: 1em;
-  -webkit-animation: intro 0.3s both;
-  animation: intro 0.3s both;
-      animation-delay: 0s;
-  max-width: 100%;
-  -webkit-animation-delay: 0.15s;
-  animation-delay: 0.15s;
-  max-width: 1280px!important;
-  margin-top: 20px;
-  //margin-left: 30px;
-  margin-bottom: 20px;
-  font-size: 60px;
-  font-weight: bold;
-  font-family: "Alegreya";
-  display: table;
-}
-
-div.main-title #thehead #thetitlerow {
-  display:table-row;
-}
-
-div.main-title #thehead #thetitle {
-  margin-right: 20px;
-  display: table-cell;
-}
-div.main-title #thehead #thepitch {
-  font-size: 30px;
-  display: table-cell;
-  padding-left: 50px;
-}
-
-#thepitch a,
-#thepitch a:visited {
-  text-decoration: none;
-  color: #494e52;
-}
-
-#thepitch a:hover,
-#thepitch a:active {
-  color: #32859e;
-}
-
 a:focus {
   outline: none;
 }
+
